--- a/Example_HelloWorld/index.html
+++ b/Example_HelloWorld/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>Welcome to Ext JS</title>
-			<link rel="stylesheet" type="text/css" href="../Downloads/ext-5.1.1.1/build/packages/ext-theme-neptune/build/resources/ext-theme-neptune-all.css">
-			<script type="text/javascript" src="../Downloads/ext-5.1.1.1/build/ext-all.js"></script>
-            <script type="text/javascript" src="../Downloads/ext-5.1.1.1/build/packages/ext-theme-neptune/build/ext-theme-neptune.js"></script>
+    <html>
+        <head>
+            <title>Welcome to Ext JS!</title>
+            <link rel="stylesheet" type="text/css" href="ext-5.1.1/build/packages/ext-theme-neptune/build/resources/ext-theme-neptune-all.css">
+            <script type="text/javascript" src="ext-5.1.1/build/ext-all.js"></script>
+            <script type="text/javascript" src="ext-5.1.1/build/packages/ext-theme-neptune/build/ext-theme-neptune.js"></script>
 
             <script type ="text/javascript" src="app.js"></script>
         </head>
